Fix position of dark mode switcher in mobile and desktop view

--- a/apps/www/components/headers/navigationHeader/darkModeSwitcher/darkModeSwitcher.module.scss
+++ b/apps/www/components/headers/navigationHeader/darkModeSwitcher/darkModeSwitcher.module.scss
@@ -6,6 +6,7 @@
   }
   position: relative;
   display: block;
+  align-self: center;
   justify-content: center;
   align-items: center;
   width: 40px;
